{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 16,
  "lineage": "85c9340c-9545-6291-bdf1-4896809a6e06",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "myloadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:248263319478:loadbalancer/my-load-balancer",
            "availability_zones": [
              "us-east-2a",
              "us-east-2b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-load-balancer-1149602975.us-east-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 10,
                "interval": 30,
                "target": "TCP:80",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "my-load-balancer",
            "idle_timeout": 60,
            "instances": [
              "i-0b85dc37295b7b5bf",
              "i-0baa4c07351c969cb"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "my-load-balancer",
            "region": "us-east-2",
            "security_groups": [
              "sg-021c1c2bc103ff704"
            ],
            "source_security_group": "248263319478/terraform-db2565e772012a7184831f77a2",
            "source_security_group_id": "sg-021c1c2bc103ff704",
            "subnets": [
              "subnet-02f495d633b0cab23",
              "subnet-08d3ee4e17a86eafd"
            ],
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248263319478",
            "name": "my-load-balancer",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_security_group.mysecgroup",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:248263319478:internet-gateway/igw-0b0b539eb546d81ad",
            "id": "igw-0b0b539eb546d81ad",
            "owner_id": "248263319478",
            "region": "us-east-2",
            "tags": {
              "Name": "Terraform-IGW"
            },
            "tags_all": {
              "Name": "Terraform-IGW"
            },
            "vpc_id": "vpc-0ca3366195a55904f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248263319478",
            "id": "igw-0b0b539eb546d81ad",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:248263319478:route-table/rtb-0a121e43961e301c2",
            "id": "rtb-0a121e43961e301c2",
            "owner_id": "248263319478",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b0b539eb546d81ad",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform-Route-Table"
            },
            "tags_all": {
              "Name": "Terraform-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ca3366195a55904f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248263319478",
            "id": "rtb-0a121e43961e301c2",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_internet_gateway.myigw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "myrtassoc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d11a8e758a92fe05",
            "region": "us-east-2",
            "route_table_id": "rtb-0a121e43961e301c2",
            "subnet_id": "subnet-08d3ee4e17a86eafd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248263319478",
            "id": "rtbassoc-0d11a8e758a92fe05",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_internet_gateway.myigw",
            "aws_route_table.myrt",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "myrtassoc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb4b6eef54d232d0",
            "region": "us-east-2",
            "route_table_id": "rtb-0a121e43961e301c2",
            "subnet_id": "subnet-02f495d633b0cab23"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248263319478",
            "id": "rtbassoc-0bb4b6eef54d232d0",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_internet_gateway.myigw",
            "aws_route_table.myrt",
            "aws_subnet.public2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysecgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:248263319478:security-group/sg-021c1c2bc103ff704",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-021c1c2bc103ff704",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-db2565e772012a7184831f77a2",
            "name_prefix": "terraform-",
            "owner_id": "248263319478",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Terraform-SG"
            },
            "tags_all": {
              "Name": "Terraform-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ca3366195a55904f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248263319478",
            "id": "sg-021c1c2bc103ff704",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:248263319478:subnet/subnet-08d3ee4e17a86eafd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d3ee4e17a86eafd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "248263319478",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "Terraform-Public-Subnet1"
            },
            "tags_all": {
              "Name": "Terraform-Public-Subnet1"
            },
            "vpc_id": "vpc-0ca3366195a55904f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248263319478",
            "id": "subnet-08d3ee4e17a86eafd",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:248263319478:subnet/subnet-02f495d633b0cab23",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02f495d633b0cab23",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "248263319478",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "Terraform-Public-Subnet2"
            },
            "tags_all": {
              "Name": "Terraform-Public-Subnet2"
            },
            "vpc_id": "vpc-0ca3366195a55904f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248263319478",
            "id": "subnet-02f495d633b0cab23",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:248263319478:vpc/vpc-0ca3366195a55904f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08cacb7e00bff1f25",
            "default_route_table_id": "rtb-064293d98b14ec335",
            "default_security_group_id": "sg-04239ccf46db967e1",
            "dhcp_options_id": "dopt-0c8633bef901653df",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ca3366195a55904f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-064293d98b14ec335",
            "owner_id": "248263319478",
            "region": "us-east-2",
            "tags": {
              "Name": "Terraform-VPC"
            },
            "tags_all": {
              "Name": "Terraform-VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248263319478",
            "id": "vpc-0ca3366195a55904f",
            "region": "us-east-2"
          }
        }
      ]
    }
  ]
}